fix: collapse chevron placement

--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -30,3 +30,7 @@ p {
 .btn.btn-ghost {
   @apply shadow-none;
 }
+
+.collapse-arrow > .collapse-title:after {
+  top: 0.8rem;
+}
